--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>{% block title %}Game List{% endblock %}</title>
+	<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/pybb_bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style.css">
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
@@ -25,7 +26,7 @@
 					<li {% block nav_recs %}{% endblock %} >
 						<a href="{% url recs_userrec_index %}">Recommendations</a>
 					</li>
-					<li>
+					<li class="active">
 						<a href="/forum">Forum</a>
 					</li>
 					<li class="divider-vertical"></li>
@@ -78,11 +79,27 @@
 			</div>
 		</div>
 	</div>
-	<div class="container">
-		{% block content %}
-		<h1>Epic title</h1>
-		<p>asdf foijasfj ioasjiodasjiodasioojd </p>
-		{% endblock %}
-	</div>
+<div class="container">
+    <div class="main-block">
+        {% if messages %}
+            <ul class="messages">
+                {% for message in messages %}
+                    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+        {% if request.path != '/' %}
+            <div id="breadcrumb">
+                {% block breadcrumb %}
+                    <a href="/">Main</a>
+                {% endblock breadcrumb %}
+            </div>
+        {% endif %}
+        <div id="content">
+            {% block content %}
+            {% endblock content %}
+        </div>
+    </div>
+</div>
 </body>
 </html>
